Rename MenuCatalog module to Restaurant
